Fix Alignment of Headlines

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -59,6 +59,11 @@ h2 {
 	text-align: center;
 }
 
+h3 {
+	font-size: 1rem;
+	text-align: center;
+}
+
 pre {
 	font-size: 16px;
 	font-family: var(--font-mono);
